# c-chat

./: CMakeLists.txt  README.md
Client/: CMakeLists.txt
Client/include/: Chat.h  Colors.h  Macros.h
Client/src/: Chat.c  main.c
Server/: CMakeLists.txt
Server/include/: Macros.h  Queue.h  Server.h
Server/src/: Queue.c  Server.c  main.c
